room block links

--- a/index.html
+++ b/index.html
@@ -128,7 +128,16 @@
         <div class="download-section">
             <div class="container">
               <h2>Accommodations</h2>
-                <p>Closer to the event, we'll provide information about hotel blocks nearby.</p>
+                <p>We've acquired room blocks at two downtown hotels (booking links are below), however each expires about a month before the wedding. We highly recommend that if you're planning on coming and staying the night in Chicago, you should reserve your hotel as early as possible. Also please feel free to shop around, there are plenty more hotels in different neighborhoods if you'd like to see a different part of the city.</p>
+                <ul>
+                    <li>
+                        <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Woo%20-%20Kanich%20Wedding%5Echirl%60wkwwkwa%60299.00%60USD%60false%604%605/20/17%605/21/17%604/29/17&app=resvlink&stop_mobi=yes">Residence Inn Marriott</a> at <a href="https://www.google.com/maps/place/Residence+Inn+by+Marriott+Chicago+Downtown%2FLoop/@41.8842898,-87.6366684,14.36z/data=!4m13!1m7!3m6!1s0x880e2cbbbe25b5cf:0x8174cf15c83a31a2!2s11+S+LaSalle+St,+Chicago,+IL+60603!3b1!8m2!3d41.8816721!4d-87.6321924!3m4!1s0x0:0xc0e57f2833d05fbd!8m2!3d41.8816!4d-87.6321968">11 South LaSalle Street</a> (cutoff date: <b>April 29</b>)
+                    </li>
+                    <li>
+                        <a href="https://www.starwoodmeeting.com/Book/WooKanich">The Westin Chicago River North</a> at <a href="https://www.google.com/maps/place/The+Westin+Chicago+River+North/@41.8922293,-87.6276472,15.7z/data=!4m5!3m4!1s0x880e2cb1b11455c5:0xa8bfec8b310ae1c5!8m2!3d41.888152!4d-87.630041">320 North Dearborn Street</a> (cutoff date: <b>April 19</b>)
+                    </li>
+                </ul>
+
             </div>
         </div>
     </section>
