--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
                         <a class="page-scroll" href="#thebigday">The Big Day</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#rsvp">RSVP</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#accommodations">Accommodations</a>
                     </li>
                     <li>
@@ -83,6 +80,10 @@
                     <li>
                         <a class="page-scroll" href="#faves">Our Faves</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://goo.gl/forms/nzmluOexQYp1zrBh1">RSVP</a>
+                    </li>
+
                </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -97,6 +98,7 @@
                 <div class="row">
                         <h1 class="brand-heading">Joyce &amp; Chris</h1>
                         <p class="intro-text">20 May 2017</p>
+                        <h2><a href="https://goo.gl/forms/nzmluOexQYp1zrBh1">RSVP Here</a></h2>
                 </div>
             </div>
         </div>
@@ -120,13 +122,6 @@
 
     <!-- Map Section -->
     <div class="map" id="venuemap"></div>
-    <!-- Contact Section -->
-    <section id="rsvp" class="container content-section text-center">
-        <div class="row">
-                <h2>RSVP</h2>
-                <p>Please RSVP using <a href="https://goo.gl/forms/nzmluOexQYp1zrBh1">this form</a>.</p>
-        </div>
-    </section>
 
 
     <!-- Accommodation Section -->
