--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         <h1 class="brand-heading">Joyce &amp; Chris</h1>
                         <p class="intro-text">20 May 2017</p>
                         <h2><a href="https://goo.gl/forms/nzmluOexQYp1zrBh1">RSVP Here</a></h2>
+                        <p class="intro-text">Please RSVP by May 1.</p>
                 </div>
             </div>
         </div>
