--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="accommodation-section">
             <div class="container">
               <h2>Accommodations</h2>
-                <p>We highly recommend that if you're planning on coming and staying the night in Chicago, you should reserve your hotel as early as possible. Also please feel free to shop around, there are plenty more hotels in different neighborhoods if you'd like to see a different part of the city.</p>
+                <p>We highly recommend that if you're planning on coming and staying the night in Chicago, you should reserve your hotel as early as possible. Also please feel free to shop around, there are plenty more hotels and Airbnbs in different neighborhoods if you'd like to see a different part of the city.</p>
             </div>
         </div>
     </section>
